Login and Register activity. Connected to firebase users.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".app.CreateOfferActivity"></activity>
+        <activity android:name=".app.CreateOfferActivity" />
+        <activity android:name=".app.LoginActivity" />
+        <activity android:name=".app.RegisterActivity"></activity>
     </application>
 
 </manifest>
