--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".app.CreateOfferActivity" />
         <activity android:name=".app.LoginActivity" />
-        <activity android:name=".app.RegisterActivity"></activity>
+        <activity android:name=".app.RegisterActivity" />
+        <activity android:name=".app.SetupActivity"></activity>
     </application>
 
 </manifest>
