--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     compile 'com.theartofdev.edmodo:android-image-cropper:2.5.+'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
 }
 apply plugin: 'com.google.gms.google-services'
