--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,7 @@ dependencies {
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.github.bumptech.glide:glide:3.8.0'
 
+    compile 'de.hdodenhof:circleimageview:1.3.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
