--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'jp.wasabeef:picasso-transformations:2.1.2'
 
 }
 apply plugin: 'com.google.gms.google-services'
