--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,9 @@ dependencies {
     compile 'jp.wasabeef:picasso-transformations:2.1.2'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.slider:library:1.1.5@aar'
+
 }
 apply plugin: 'com.google.gms.google-services'
