--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <uses-feature android:name="android.hardware.camera" />
 
@@ -16,6 +18,9 @@
         android:roundIcon="@drawable/app_icon_5"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <receiver android:name=".app.MainActivity$NetworkReceiver" >
+
+        </receiver>
         <activity android:name=".app.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
